# c-is-awesome

./: .gitignore  .gitmodules  readme.md
opensource/: readme.md
opensource/fio/os/windows/: dobuild.cmd
opensource/msquic/: CMakeLists.txt  README.md
opensource/msquic/.azure/: azure-pipelines-int.ci.yml
opensource/msquic/.azure/scripts/: run-gtest.ps1
opensource/msquic/docs/: BUILD.md
opensource/msquic/scripts/: build.ps1  interop.ps1  log.ps1  prepare-machine.ps1  spin.ps1  test.ps1
opensource/rufus/src/: parser.c
opensource/wimlib/tests/: win32-test-imagex-capture_and_apply.bat
opensource/wireshark/tools/: make-version.pl
opensource/zisofs-tools/: mkzftree.c
projects/1.change2bin/: binplace.c  c2b.h  change2bin.sln  change2bin.vcxproj  config.c  diasymbols.c  func.txt  llvmsymbols.c  main.c  readme.md  utils.c
projects/2.ucrt_testing/: main.c  ucrt_testing.vcxproj
projects/3.command_line_parser/: CMakeLists.txt  main.c
projects/4.cmake_example/: CMakeLists.txt
tools/: readme.md
tools/CCodebaseExplorer/: CCodebaseExplorer.sln
tools/CCodebaseExplorer/ExtractIncludes/: ExtractIncludes.csproj  Program.cs
tools/CCodebaseExplorer/ExtractMacros/: ExtractMacros.csproj  Program.cs
tools/CCodebaseExplorer/ExtractStrutures/: ExtractStrutures.csproj  Program.cs
tools/CCodebaseExplorer/FindFunctionSignatures/: FindFunctionSignatures.csproj  Program.cs
vin-pro/lists/: library.c  list.c  list.h  list.h.gch  listofbooks.c
vin-pro/pthreads/: block_sum.c  block_sum_with_ctx.c  block_sum_with_mutex.c  producer_consumer.c
(+114 files in other folders)
